@@ -4,6 +4,8 @@ import lombok.Getter;
 import lombok.Setter;
 
 import java.util.*;
+import java.util.function.Supplier;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
@@ -22,7 +24,7 @@ import nl.vpro.domain.media.bind.MediaFormTextJson;
 @JsonSerialize(using = MediaFormTextJson.Serializer.class)
 @JsonDeserialize(using = MediaFormTextJson.Deserializer.class)
 @XmlAccessorType(XmlAccessType.NONE)
-public class MediaFormText {
+public class MediaFormText implements Supplier<String> {
 
     @XmlAttribute
     BooleanOperator booleanOperator = null;
@@ -34,7 +36,7 @@ public class MediaFormText {
     Boolean implicitWildcard = null;
 
     @XmlValue
-    private String text;
+    private String value;
 
     private String parsedText;
 
@@ -47,8 +49,8 @@ public class MediaFormText {
 
     }
 
-    public MediaFormText(String text) {
-        this.text = text;
+    public MediaFormText(String value) {
+        this.value = value;
     }
 
     public enum BooleanOperator {
@@ -56,23 +58,29 @@ public class MediaFormText {
         OR
     }
 
-    public void setText(String text) {
-        this.text = text;
-        this.parsedText = null;
 
+
+    @Override
+    public String get() {
+        return value;
+    }
+
+    public void set(String value) {
+        this.value = value;
+        this.parsedText = null;
     }
 
     public boolean isEmpty() {
-        return text == null || text.isEmpty();
+        return value == null || value.isEmpty();
     }
 
 
 
     public boolean isQuoted() {
-        if (! isEmpty() && text.length() > 2) {
-            var first = text.charAt(0);
+        if (! isEmpty() && value.length() > 2) {
+            var first = value.charAt(0);
             if (first == '\'' || first == '"') {
-                return text.charAt(text.length() - 1) == first;
+                return value.charAt(value.length() - 1) == first;
             }
         }
         return false;
@@ -80,39 +88,51 @@ public class MediaFormText {
 
     public String getUnQuotedValue() {
         if (isQuoted()) {
-            return text.substring(1, text.length() - 1);
+            return value.substring(1, value.length() - 1);
         } else {
-            return text;
+            return value;
         }
+    }
+
+    private static final Pattern PREPARSE = Pattern.compile("[^\\p{IsAlphabetic}&!+\\-\\d\\s]");
+    private static final Pattern AFTERPARSE = Pattern.compile("[^\\p{IsAlphabetic}\\-\\d\\s]");
+
+    public String getCleanText() {
+        String lower =   getUnQuotedValue().toLowerCase();
+        Matcher m = PREPARSE.matcher(lower);
+        return m.replaceAll("");
     }
     public String getParsedText() {
         if (parsedText == null) {
-            if (text == null) {
+            if (value == null) {
                 return null;
             }
-            String queryStringText = getUnQuotedValue().toLowerCase().replaceAll("[^\\p{IsAlphabetic}&!+\\-\\d\\s]", "");
+            String queryStringText = getCleanText();
+            String parse1;
             if (queryStringText.length() > 1) {
-                parsedText =  parseANDandNOT(queryStringText);
+                parse1 =  parseANDandNOT(queryStringText);
             } else {
-                parsedText =  queryStringText;
+                parse1 =  queryStringText;
             }
+            Matcher matcher =  AFTERPARSE.matcher(parse1);
+            parsedText =  matcher.replaceAll("");
         }
         return parsedText;
     }
     public Optional<String> getWildcard() {
         if (!isQuoted()) {
             Boolean implicitWildcard = getImplicitWildcard();
-            if ((implicitWildcard != null && implicitWildcard) && !text.endsWith(" ")) {
+            if ((implicitWildcard != null && implicitWildcard) && !value.endsWith(" ")) {
                 // the last word will be implicitly converted to a wildcard. The assumption being that the user is still typing
                 String parsed = getParsedText();
                 List<String> split = Arrays.asList(parsed.trim().split("\\s+"));
-                var lastWord = split.get(split.size() - 1);
+                var lastWord = split.getLast();
                 return Optional.of(lastWord + "*");
             }
-            if (text.endsWith("*")) {
+            if (value.endsWith("*")) {
                 String parsed = getParsedText();
                 List<String> split = Arrays.asList(parsed.trim().split("\\s+"));
-                var lastWord = split.get(split.size() - 1);
+                var lastWord = split.getLast();
                 return Optional.of(lastWord + "*"); // * is removed by getParsedText()
             }
         }
@@ -158,7 +178,7 @@ public class MediaFormText {
 
     @Override
     public String toString() {
-        return text + " (" + getParsedText() + ")";
+        return value + " (" + getParsedText() + ")";
     }
 
 }
